--- a/index.css
+++ b/index.css
@@ -1,223 +1,306 @@
-*
-{
-    margin: 0px;
-    padding: 0px;
+*{
+    margin:0;
+    padding:0;
     box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
-
+    font-family:Arial, Helvetica, sans-serif;
 }
-p
-{
-align-content: center;
-}
-.uppercontainer{
-    width: 50%;
-    height: 50%;
-    margin: 50px auto;
+.upper-container {
+    width:50%;
+    height:10%;
+    margin:50px auto;
     position: relative;
-    padding-bottom: 0px;
-  
-
-}
-.uppercontainer1{
-    width: 35%;
-    height: 100%;
-    padding-top: 20px ;
-    padding-bottom: 0px;
-}
-#mark{
-    font-weight: bold;
-    font-size: 2.5rem;
-}
-#marks{
-    font-size: 2.5rem;
-    margin-left: 10px;
-    opacity:0.5;
-}
-.uppercontainer2
-{
-    width: 38%;
-    height: 100%;
-    padding-top: 20px;
-    position: absolute;
-    top: 0px;
-    right: 0px;
-    padding-bottom: 0px;
-    border-bottom: 0px;
-    
-    
-}
-
-#addlists
-{
-    position: absolute;
-    width: 85%;
-    height: 100%;
-    top: 0px;
-    right: 0px;
-    opacity:0.5;
-    font-size: 25px;
-    padding-top:30px ;
-    
-    
    
 }
-.type
-{
-    margin-top: 150px;
-    margin-bottom: 30px;
 
+.upper-container1 {
+    width:45%;
+    height:100%;
+    padding-top:50px;
+
+}
+
+#tasks {
+    font-weight:bold;
+    font-size:62px;
+    opacity:0.8;
+
+}
+
+#lists {
+    margin-left:-3px;
+    opacity:0.5;
+    font-size: 64px;
     
 }
-.container
-{
-    width: 50%;
-    height: 300px;
+
+.upper-container2 {
+    width:30%;
+    height:100%;
+    position:absolute;
+    top:0px;
+    right:0px;
+    
+}
+
+#addlist {
+    position:absolute;
+    width:80%;
+    height:100%;
+    top:10px;
+    right:0px;
+    left:100px;
+    font-size:35px;
+    opacity:0.5;
+    padding-top:60px;
+    
+}
+
+.circle {
+    position:absolute;
+    top:65px;
+    left:50px;
+
+}
+.price-container {
     display: flex;
-    justify-content:space-evenly;
-    margin:320px;
-    margin-top: 0px;
-    
-   
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    margin: 40px 120px;
+}
+
+.card1 {
+  width: 230px;
+  height: 355px;
+  border:1.5px solid red;
+  position:relative;
+  left:120px;
+  border-radius:8px;
+  box-shadow: 5px 5px 10px gray;
+  
+}
+.card2 {
+  width: 230px;
+  height: 355px;
+  border:1.5px solid red;
+  position:relative;
+  left:20px;
+  border-radius:8px;
+  box-shadow: 5px 5px 10px gray;
+  
+}
+
+.card3 {
+  width: 230px;
+  height: 355px;
+  border:1.5px solid red;
+  position:relative;
+  right:80px;
+  border-radius:8px;
+  box-shadow: 5px 5px 10px gray;
     
 }
 
-
-.text
-{
-    width: 25%;
-    height: 250px;
-    border: 1px solid;
-    border-radius: 12px;
-    border-color: red;
-    box-shadow: 4px 3px 1px lightgrey;
-    font-family: adobe-clean sans-serif ;
-    letter-spacing: 0.5px;
-    
-   
+.div1 {
+    position:absolute;
+    top:30px;
+    right:0;
+    font-size: 25px;
+    width:85%;
+    text-align:left;
+    height:15%;
+    color:red;
+    border-bottom:1px solid black;
     
 }
-.test
-{
-    font-family: 'Open Sans Condensed', sans-serif;
-    align-content: center;
-    color: orangered;
-    font-size: 20px;
-    font-weight: lighter;
-    margin-bottom: 10px;
-    
-    
- 
+.para {
+    position:absolute;
+    top:5px;
+    left:15px;
+}
+.div2 {
+    width:90%;
+    height:10%;
+    font-size:22px;
+    color:red;
+    text-align:right;
+    position:absolute;
+    top:35%;
+    font-weight: bold;
+    text-decoration: line-through 3.5px;
+
 }
 
+.div3 {
+    width:90%;
+    height:10%;
+    position:absolute;
+    top:52%;
+    text-align: right;
+    font-size:25px;
+    opacity: 0.8;
 
-.d
-{
-    margin-top: 20px;
-    margin-left: 10px;
-   
-    
 }
-.press
-{
-    width: 20px;
-    height: 20px;
+
+#check {
+    width:20px;
+    height:20px;
+    
+
+}
+
+.not-show {
+    filter: blur(6px);
+    -webkit-filter: blur(8px);
+}
+
+.pop-up {
+    width: 30%;
+    height: 30vh;
+    padding: 20px;
+    position: absolute;
+    top:240px;
+    left:537px;
+    color: red;
+    border: 1.5px solid red;
+    border-radius: 8px;
+    box-shadow: 5px 5px 10px grey;
+    text-align: center;
+    box-shadow: 3px 3px 10px grey;
     background-color: white;
+}
+
+#add-new {
+    opacity: 0.7;
+    font-size: 22px;
+    text-align: center;
+}
+
+.pop-upbar {
+    width: 80%;
+    height: 25%;
+    margin-top: 25px;
+    border: 1.5px solid red;
+    border-radius: 4px;
+    box-shadow: 1px 1px 3px grey;
+}
+
+.pop-up-button {
+    width: 22%;
+    height: 20%;
+    position: absolute;
+    left: 170px;
+    margin-top: 90px;
+    color: white;
+    border: none;
+    border-radius: 20px;
+    background-color: red;
+    font-size: 20px;
     cursor: pointer;
 }
-#u2
-{
-    width: 38%;
-    height: 100%;
-    padding-top: 20px;
+.container1{
     position: relative;
-    top:50px;
-    right: 100px;
-    padding-bottom: 0px;
-    border-bottom: 0px;
-   
+    padding-top: 0px;
 }
 
-.e
-{
-    width: 38%;
-    height: 100%;
-    padding-top: 127px;
-    position: absolute;
-    top: 0px;
-    right: 0px;
-    padding-bottom: 0px;
-    border-bottom: 0px;
-    padding-right: 832px;
+.line1 {
+    font-weight: bold;
+    font-size: 40px;
+    text-decoration: 2px solid line-through gray;
+    position:absolute;
+    left:400px;
+    top:10px;
+
+}
+.line2 {
+    font-weight: bold;
+    font-size: 40px;
+    text-decoration: 2px solid line-through gray;
+    position:absolute;
+    top:10px;
+    right:400px;
+
+}
+.heading1 {
+    font-size: 60px;
+    font-weight: bold;
+    opacity:0.8;
+    position: relative;
+    top:0px;
+    margin-left: 590px;
+}
+
+.container2{
+    position: relative;
     
+    padding-top: 50px;
     
 }
-.l
-{
-    font-size: 25px;
-    opacity: 0.5;
+.arrow{
+    position:relative;
+    left:703px;
+    opacity: 0.8;
 }
-.m
-{
-    width: 20%;
-    height: 300px;
-    box-sizing: border-box;
+#back {
+    position:relative;
+    left:720px;
+    bottom:7px;
+    font-size:30px;
+    opacity:0.6;
+}
+
+.card {
+  width: 450px;
+  height: 430px;
+  border:2px solid #EB6D60;
+  position:absolute;
+  top:230px;
+  left:540px;
+  border-radius:8px;
+  box-shadow: 5px 5px 15px gray;
+  
+}
+.heading2 {
+    font-size:30px;
+    position:absolute;
+    top:50px;
+    color:red;
     
-    display: flex;
-    justify-content:space-evenly;
-    margin:320px;
-    margin-top: 30px;
-    border: 1px solid red;
-    font-size: 25px;
 }
-.add
-{
-   
-    margin-top: 250px;
+.section1 {
+    width:65%;
+    height:23%;
+    position:absolute;
+    right:0px;
+    border-bottom:1px solid black;
+
 }
-.notshow
-{
-    filter: blur(6px);
-    -webkit-filter: blur(6px);
+.section2 {
+    width:90%;
+    height:10%;
+    font-size:25px;
+    color:red;
+    position:absolute;
+    top:33%;
+    left:34%;
+    font-weight: bold;
+    text-decoration: line-through 3.5px;
+
 }
-.popup{
-    position: absolute;
-    left: 37%;
-    top: 30%;
-    height: 25%;
-    width: 27%;
-    border: 1.5px solid red;
-    border-radius: 10px;
-    color: red;
-    font-size:10px ;
-    box-shadow: 3px 10px grey;
-    background-color: white;
-    padding: 20px;
+
+.section3 {
+    width:90%;
+    height:10%;
+    position:absolute;
+    top:45%;
+    left:34%;
+    font-size:25px;
+    opacity: 0.8;
+
 }
-.addnew
-{
-    opacity:0.7 ;
-    font-size: 17px;
-}
-.popupbar
-{
-    margin-top: 20px;
-    border-radius: 5px;
-    width:85% ;
-    height: 25%;
-    box-shadow: 1px 3px grey;
-    border: 1.5px solid red;
-}
-.button
-{
-    width: 25%;
-    height: 20%;
-    margin-top:18px ;
-    color: white;
-    background-color: red;
-    border-radius: 20px;
-    border: none;
-    position: absolute;
-    left: 130px;
-    font-size: 20px;
+
+.section4 {
+    position:absolute;
+    right:18px;
+    bottom:20px;
 }
